[package]
name = "bookstore"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
dotenvy = "0.15.7"
postgres = "0.19.9"
serde = "1.0.213"
serde_json = "1.0.132"
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio-native-tls"] }
tokio = { version = "1.41.0", features = ["full"] }
